@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
-    <RuntimeFrameworkVersion>2.1.6</RuntimeFrameworkVersion>
+    <!-- <RuntimeFrameworkVersion>2.1.6</RuntimeFrameworkVersion> -->
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
@@ -18,6 +18,7 @@
     <!-- <PackageReference Update="Microsoft.NETCore.App" Version="2.1.6" />  -->
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <!-- <PackageReference Include="Microsoft.AspNetCore.Razor.Design" PrivateAssets="All" /> -->
   </ItemGroup> 
 
 </Project>
