@@ -26,7 +26,8 @@ namespace Plazacraft.HOMM3.DamageSymulator.WebService
         // This method gets called by the runtime. Use this method to add services to the container.
         public void ConfigureServices(IServiceCollection services)
         {
-            services.AddMvc().SetCompatibilityVersion(CompatibilityVersion.Version_2_1);
+            services.AddMvc(options => options.EnableEndpointRouting = false).SetCompatibilityVersion(CompatibilityVersion.Version_2_1);
+            
             services.AddCors(options =>
             {
                 options.AddPolicy("AllowSpecificOrigin",
@@ -53,6 +54,7 @@ namespace Plazacraft.HOMM3.DamageSymulator.WebService
             app.UseStaticFiles();
 
             app.UseHttpsRedirection();
+            
             app.UseMvc();
         }
     }
