@@ -121,9 +121,9 @@
         var _status = true;
         var _activeTab = '';
         var _docSpec = null;
-        var _url = 'http://homm3.plazacraft.com/damagesymulator/api/';
+        //var _url = 'http://homm3.plazacraft.com/damagesymulator/api/';
 
-        //var _url = 'http://localhost:5002/api/';
+        var _url = 'http://localhost:5002/api/';
 
         function SetStatus(value, isError)
         {
